// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ALERT] should render with custom props 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-17y33vk-MuiSvgIcon-root-style"
      data-testid="CircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
      />
    </svg>
  </div>
</body>
`;

exports[`[ALERT] should render with default props 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-t8w6mh-MuiSvgIcon-root-style"
      data-testid="CircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
      />
    </svg>
  </div>
</body>
`;
